<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Make sure to add group id -->
    <group android:id="@+id/nav_group_one_id"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/nav_profile" />
        <item
            android:id="@+id/nav_highlights"
            android:icon="@drawable/ic_perm_media_black_24dp"
            android:title="@string/nav_highlights" />
        <item
            android:id="@+id/nav_lists"
            android:icon="@drawable/ic_list_black_24dp"
            android:title="@string/nav_lists" />
        <item
            android:id="@+id/nav_discussion"
            android:icon="@drawable/ic_person_add_black_24dp"
            android:title="@string/nav_connect" />

    </group>

    <group android:id="@+id/nav_group_two_id"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_twitter_ads_id"
            android:title="@string/nav_twitter_ads" />
        <item
            android:id="@+id/nav_night_mode_id"
            android:title="@string/nav_night_mode"
            app:actionLayout="@layout/action_view_switch" />
        <item
            android:id="@+id/nav_settings_id"
            android:title="@string/nav_settings" />
        <item
            android:id="@+id/nav_help_id"
            android:title="@string/nav_help" />

    </group>
</menu>
